# mechanic

./: .gitignore  Cargo.toml
.githooks/: pre-commit
crates/mechanic-app/: Cargo.toml
crates/mechanic-app/src/: app.rs  convert.rs  input.rs  main.rs  mouse.rs
crates/mechanic-app/tests/: cli_smoke.rs
crates/mechanic-config/: Cargo.toml
crates/mechanic-config/src/: font.rs  lib.rs  terminal.rs  theme.rs
crates/mechanic-core/: Cargo.toml
crates/mechanic-core/src/: error.rs  event.rs  lib.rs  paste.rs  pty.rs  terminal.rs
crates/mechanic-renderer/: Cargo.toml
crates/mechanic-renderer/src/: background.rs  grid.rs  lib.rs  logo.rs  pipeline.rs  text.rs
crates/mechanic-renderer/src/shaders/: cell.wgsl
design/: ARCHITECTURE.md  CPU-AUDIT.md  CPU-SPEC.md  OUTLINE.md
