[package]
name = "mechanic-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wgpu.workspace = true
cosmic-text.workspace = true
log.workspace = true
mechanic-config.workspace = true
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
raw-window-handle = "0.6"
